New icons and SEO

--- a/Web/index.html
+++ b/Web/index.html
@@ -3,15 +3,46 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/Icon Logo Confort Group .svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Title and Description -->
+  <title>Confort Group|Residenciales para Adultos Mayores en Montevideo</title>
+  <meta name="description" content="En Confort Group, ofrecemos residencias confortables y acogedoras para adultos mayores en Montevideo, diseñadas para su bienestar y calidad de vida. Contáctanos y descubre nuestros servicios.">
+   <!-- Meta Keywords -->
+   <meta name="keywords" content="Residencias para adultos mayores, Montevideo, Bienestar, Confort, Atención a mayores, Servicios para mayores, Actividades para mayores, Residencias Confort Group, Montevideo adultos mayores, Cuidado de mayores en Montevideo, Residenciales en Sayago">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Confort Group|Residenciales para Adultos Mayores en Montevideo">
+  <meta property="og:description" content="En Confort Group, ofrecemos residencias confortables y acogedoras para adultos mayores en Montevideo, diseñadas para su bienestar y calidad de vida. Contáctanos y descubre nuestros servicios.">
+  <meta property="og:image" content="https://www.tu-dominio.com/assets/images/og-image.jpg">
+  <meta property="og:url" content="https://www.tu-dominio.com">
+  <meta property="og:locale" content="es_ES">
+  <meta property="og:site_name" content="Confort Group">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Confort Group|Residenciales para Adultos Mayores en Montevideo">
+  <meta name="twitter:description" content="En Confort Group, ofrecemos residencias confortables y acogedoras para adultos mayores en Montevideo, diseñadas para su bienestar y calidad de vida. Contáctanos y descubre nuestros servicios.">
+  <meta name="twitter:image" content="https://www.tu-dominio.com/assets/images/twitter-image.jpg">
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Confort Group|Residenciales para Adultos Mayores en Montevideo  ">
+  <meta itemprop="description" content="En Confort Group, ofrecemos residencias confortables y acogedoras para adultos mayores en Montevideo, diseñadas para su bienestar y calidad de vida. Contáctanos y descubre nuestros servicios.">
+  <meta itemprop="image" content="https://www.tu-dominio.com/assets/images/schema-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="./public/icon.svg" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
-    rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Confort-group</title>
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap" rel="stylesheet">
+
+  <!-- Canonical URL -->
+  <!-- <link rel="canonical" href="https://www.tu-dominio.com" /> -->
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
 </head>
 
 <body>
